# Syllabus-to-Schedule-Agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/processed/: default_documents.jsonl
data/processed/indices/: chroma.sqlite3
data/raw/: sample_course_1.txt  sample_course_2.txt
deliverables/: README.md  prompts.txt  report.tex
docs/: architecture.md  ds_report.md
models/s2s_lora_t5/checkpoint-135/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
models/s2s_lora_t5/checkpoint-180/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
models/s2s_lora_t5/checkpoint-225/: adapter_model.safetensors  rng_state.pth  trainer_state.json
models/s2s_lora_t5/checkpoint-45/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
models/s2s_lora_t5/checkpoint-90/: adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
src/s2s/: __init__.py  cli.py  schemas.py  utils.py
src/s2s/execute/: __init__.py  exporters.py  scheduler.py
src/s2s/extract/: __init__.py  infer_lora_t5.py  validate.py
src/s2s/ingest/: __init__.py  html_reader.py  pdf_reader.py
src/s2s/plan/: __init__.py  planner.py
src/s2s/rag/: __init__.py  index.py
src/s2s_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_end_to_end.py  test_extract.py  test_plan.py
training/: collate.py  eval_extraction.py  make_synth.py  train_lora_t5.py
training/data/: seed.jsonl  synth.jsonl
ui/: app.py
(+7 files in other folders)
