[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s2s-agent"
version = "0.1.0"
description = "Syllabus-to-Schedule (S2S) Agent"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "S2S Agent Team", email = "team@example.com" }
]
dependencies = [
  "typer>=0.9.0",
  "pdfplumber>=0.10.3",
  "beautifulsoup4>=4.12.2",
  "chromadb>=0.4.22",
  "sentence-transformers>=2.2.2",
  "transformers>=4.37.0",
  "peft>=0.7.1",
  "datasets>=2.14.0",
  "torch>=2.1.0",
  "pydantic>=1.10,<2",
  "dateparser>=1.2.0",
  "streamlit>=1.25.0",
  "pandas>=1.5.0",
  "tabulate>=0.9.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.11"]

[project.scripts]
s2s-agent = "s2s.cli:app"

[tool.typer]
pretty_exceptions_enable = true
